test/spec_vectors/load/fail/module_45.wat
(module (memory 0) (func $type-address-empty-in-then (i32.const 0) (i32.const 0) (if (then (i32.load) (drop)))))